# paper_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  bot.py  pyproject.toml  tox.ini
notebooks/: sandbox.ipynb
src/bot/: commands.py
src/bot/routers/: analyze.py  common.py  generate.py  train.py
src/services/file_processor/: client.py  utils.py
src/services/handlers/: analyze.py  commands.py  keyboards.py  states.py
src/services/vlm/: client.py  utils.py
src/settings/: links.py  logger.py  prompts.py
