[tool.poetry]
name = "paper-bot"
version = "0.1.0"
description = ""
authors = ["Nikita Yatchenko <yatchenko.nikita@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.5"
pydantic = "2.10.6"
pydantic-settings = "2.8.1"
aiogram = "3.18.0"
vllm = "^0.8.4"

[tool.poetry.group.dev.dependencies]
jupyter = "1.1.1"
isort = "6.0.1"
flake8 = "7.1.2"
pre-commit = "4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
