[tool.poetry]
name = "paper-bot"
version = "0.1.0"
description = ""
authors = ["Nikita Yatchenko <yatchenko.nikita@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.10"
pydantic = "2.10.6"
pydantic-settings = "2.8.1"
aiogram = "3.18.0"
langchain = "0.3.23"
unstructured = {extras = ["all-docs"], version = "0.17.2"}
pillow = "^11.2.1"
lxml = "^5.3.2"
matplotlib = "^3.10.1"
chromadb = "^1.0.5"
tiktoken = "^0.9.0"
transformers = "^4.51.3"

[tool.poetry.group.dev.dependencies]
jupyter = "1.1.1"
isort = "6.0.1"
flake8 = "7.1.2"
pre-commit = "4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
